--- a/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
@@ -23,6 +23,7 @@
 @import "modules/organization_chooser";
 @import "modules/overlap";
 @import "modules/popover";
+@import "modules/preferences";
 @import "modules/progress_bar";
 @import "modules/progress_listing";
 @import "modules/terms";
