Use proper helper

--- a/app/views/users/terms.html.erb
+++ b/app/views/users/terms.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :breadcrumbs do %>
-  <% if current_user? %>
+  <% if current_logged_user? %>
     <%= breadcrumbs @user %>
   <% else %>
     <%= header_breadcrumbs %>
