--- a/app/views/certificates/_certificate.html.erb
+++ b/app/views/certificates/_certificate.html.erb
@@ -38,5 +38,7 @@
 <div class="mu-certificate-box">
   <img src="<%= certificate.background_image_url %>" class="background-image"/>
   <%= ERB.new(certificate.template_html_erb).result(certificate.locals.instance_eval { binding }).html_safe %>
-  <div><img class="qr-code" src="<%= qr_for certificate %>"/></div>
+  <a href="<%= verify_certificate_path certificate.code %>" target="_blank">
+    <div><img class="qr-code" src="<%= qr_for certificate %>"/></div>
+  </a>
 </div>
