Show discussions link on user profile if user can discuss on current organization

--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -15,7 +15,7 @@
       <div class="mu-user-menu-item">
         <%= messages_user_menu_link %>
       </div>
-      <% if should_show_discussions? %>
+      <% if current_user&.can_discuss_here? %>
         <div class="mu-user-menu-item">
           <%= discussions_user_menu_link %>
         </div>
