Remove mu-monolesson and guide-header usages as they have no styles

--- a/app/views/layouts/_guide_container.html.erb
+++ b/app/views/layouts/_guide_container.html.erb
@@ -8,7 +8,7 @@
     <div class="mu-inline-block-right">
       <h1><%= language_icon @guide.language %></h1>
     </div>
-    <div class="mu-inline-block-left guide-header">
+    <div class="mu-inline-block-left">
       <h1 class="pull-left">
         <span class="pull-left">
           <%= subject.name %>
