Replace pull-left with flex in guide container and guide title icons

--- a/app/assets/stylesheets/mumuki_laboratory/application/_layout.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_layout.scss
@@ -122,6 +122,9 @@ hr {
 
 /* TODO: move to mumuki-styles */
 .mu-inline-block-left {
+  display: flex;
+  align-items: center;
+
   margin-left: 15px;
 }
 
