--- a/app/views/layouts/_guide_title_icons.html.erb
+++ b/app/views/layouts/_guide_title_icons.html.erb
@@ -1,4 +1,4 @@
-<div class="mu-guide-title-icons">
+<div class="mu-content-title-icons">
   <% if current_user? && should_display_medal?(@guide, Organization.current) %>
       <%= content_medal_for(@guide, current_user) %>
   <% end %>
