Extract exercise icon titles to partial

--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -20,10 +20,7 @@
     <div class="mu-inline-block-left">
       <h1 class="hidden-xs"><%= full_title_for @exercise %></h1>
       <h1 class="visible-xs"><%= short_title_for @exercise %></h1>
-      <div class="mu-content-title-icons">
-        <%= teacher_info_button @exercise %>
-        <%= link_to_bibliotheca_exercise @exercise %>
-      </div>
+      <%= render partial: 'exercises/exercise_title_icons' %>
     </div>
   </div>
 <% end %>
