Hide language icon on guide mobile view

--- a/app/views/layouts/_guide_container.html.erb
+++ b/app/views/layouts/_guide_container.html.erb
@@ -5,7 +5,7 @@
 <%= render layout: 'layouts/guide', locals: { subject: subject } do %>
 
   <div class="row">
-    <div class="mu-inline-block-right">
+    <div class="mu-inline-block-right hidden-xs">
       <h1><%= language_icon @guide.language %></h1>
     </div>
     <div class="mu-inline-block-left">
