Add new breadcrumb for user-related views

--- a/app/views/users/terms.html.erb
+++ b/app/views/users/terms.html.erb
@@ -1,6 +1,6 @@
 <%= content_for :breadcrumbs do %>
   <% if current_logged_user? %>
-    <%= breadcrumbs @user %>
+    <%= breadcrumbs_for_my_account %>
   <% else %>
     <%= header_breadcrumbs %>
   <% end %>
