--- a/app/views/users/discussions.html.erb
+++ b/app/views/users/discussions.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :breadcrumbs do %>
-  <%= breadcrumbs @user %>
+  <%= breadcrumbs_for_my_account %>
 <% end %>
 
 <%= render partial: 'layouts/user_menu' %>
