Replace 'profile' with 'my profile' on user profile and menu bar

--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -1,5 +1,5 @@
 <div class="mu-user-header">
-  <h1><%= t(:profile) %></h1>
+  <h1><%= t(:my_profile) %></h1>
   <div class="mu-profile-actions hidden-xs">
     <%= edit_profile_button %>
   </div>
