Extract logic in user menu header and divider

--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -1,10 +1,8 @@
 <div class="col-md-3 mu-tab-body mu-user-menu">
   <div class="col-md-12">
-    <div class="mu-user-menu-header">
-      <%= t(:my_account) %>
-    </div>
+    <%= user_menu_header %>
     <%= profile_user_menu_link %>
-    <div class="mu-user-menu-divider horizontal"></div>
+    <%= user_menu_divider %>
     <%= messages_user_menu_link %>
     <%= discussions_user_menu_link %>
     <div class="mu-user-menu-divider horizontal"></div>
