Add up chevron to hide My Account on small screens

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_menu.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_menu.scss
@@ -7,6 +7,16 @@
   color: $mu-color-disabled;
   text-transform: uppercase;
   margin-bottom: 30px;
+
+  @media only screen and (min-width: $screen-md-min) {
+    i {
+      display: none;
+    }
+
+    span {
+      padding-left: 0px;
+    }
+  }
 }
 
 .mu-user-menu-item {
