Toggle showing/hiding user menu when clicking on 'My Account'

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_menu.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_menu.scss
@@ -1,5 +1,11 @@
 .mu-user-menu {
   display: flex;
+
+  &.hidden-sm-screen {
+    @media only screen and (max-width: $screen-sm-max) {
+      display: none;
+    }
+  }
 }
 
 .mu-user-menu-header {
