Separate user menu header from the rest of the menu

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_menu.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_menu.scss
@@ -7,6 +7,7 @@
   color: $mu-color-disabled;
   text-transform: uppercase;
   margin-bottom: 30px;
+  padding-left: 15px;
 
   @media only screen and (min-width: $screen-md-min) {
     i {
