--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -1,13 +1,15 @@
-<div class="col-md-3 mu-tab-body mu-user-menu">
-  <div class="col-md-12">
-    <%= user_menu_header %>
-    <%= profile_user_menu_link %>
-    <%= user_menu_divider %>
-    <%= messages_user_menu_link %>
-    <%= discussions_user_menu_link %>
-    <div class="mu-user-menu-divider horizontal"></div>
-    <%= certificates_user_menu_link %>
+<div class="col-md-3 mu-tab-body">
+  <%= user_menu_header %>
+  <div class="mu-user-menu">
+    <div class="col-md-12">
+      <%= profile_user_menu_link %>
+      <%= user_menu_divider %>
+      <%= messages_user_menu_link %>
+      <%= discussions_user_menu_link %>
+      <%= user_menu_divider %>
+      <%= certificates_user_menu_link %>
+    </div>
+    <div class="mu-user-menu-divider vertical hidden-sm hidden-xs"></div>
   </div>
-  <div class="mu-user-menu-divider vertical hidden-sm hidden-xs"></div>
 </div>
 <div class="mu-user-menu-divider horizontal visible-sm visible-xs"></div>
