--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-3 mu-tab-body">
   <%= user_menu_header %>
   <div class="mu-user-menu hidden-sm-screen">
-    <div class="col-md-12">
+    <div class="col-xs-12">
       <%= profile_user_menu_link %>
       <%= user_menu_divider %>
       <%= messages_user_menu_link %>
