Adjust margins and add cursor on user menu

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_menu.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_menu.scss
@@ -1,5 +1,6 @@
 .mu-user-menu {
   display: flex;
+  margin-top: 25px;
 }
 
 .mu-user-menu-content {
@@ -10,11 +11,12 @@
   font-size: 15px;
   color: $mu-color-disabled;
   text-transform: uppercase;
-  margin-bottom: 30px;
   padding-left: 2px;
+  cursor: pointer;
 
   @media only screen and (min-width: $screen-md-min) {
     padding-left: 15px;
+    cursor: auto;
 
     i {
       display: none;
@@ -27,6 +29,8 @@
 }
 
 .mu-user-menu-items {
+  margin-top: 30px;
+
   &.hidden-sm-screen {
     @media only screen and (max-width: $screen-sm-max) {
       display: none;
