Use new color variable for gray-lighter

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_progress_bar.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_progress_bar.scss
@@ -8,7 +8,7 @@
     border-style: solid;
     width: 100%;
     height: 10px;
-    background-color: $gray-lighter;
+    background-color: $gray-200;
     &:hover {
       text-decoration: none;
     }
