--- a/app/views/guides/_guide_container.html.erb
+++ b/app/views/guides/_guide_container.html.erb
@@ -5,7 +5,7 @@
 <%= render layout: 'guides/guide', locals: { subject: subject } do %>
 
   <div class="row">
-    <div class="mu-inline-block-right hidden-xs">
+    <div class="mu-inline-block-right d-none d-sm-block">
       <h1><%= language_icon @guide.language %></h1>
     </div>
     <div class="mu-inline-block-left">
