--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -12,7 +12,7 @@
         <%= certificates_user_menu_link %>
       </div>
     </div>
-    <div class="mu-user-menu-divider vertical hidden-sm hidden-xs"></div>
+    <div class="mu-user-menu-divider vertical d-none d-md-block"></div>
   </div>
 </div>
-<div class="mu-user-menu-divider horizontal visible-sm visible-xs"></div>
+<div class="mu-user-menu-divider horizontal d-block d-md-none"></div>
