--- a/app/views/layouts/exercise_inputs/layouts/_input_primary.html.erb
+++ b/app/views/layouts/exercise_inputs/layouts/_input_primary.html.erb
@@ -20,10 +20,10 @@
 
         <div class="mu-kids-states mu-multiple-scenarios">
           <div class="mu-scenarios">
-            <a class="mu-scenario-control previous hidden">
+            <a class="mu-scenario-control previous d-none">
               <%= fa_icon('caret-left', class: 'fa-lg fa-2x') %>
             </a>
-            <a class="mu-scenario-control next hidden">
+            <a class="mu-scenario-control next d-none">
               <%= fa_icon('caret-right', class: 'fa-lg fa-2x') %>
             </a>
             <div class="mu-kids-state mu-state-initial mu-kids-gbs-board-initial mu-initial-state">
