--- a/app/views/layouts/modals/_kids_results.html.erb
+++ b/app/views/layouts/modals/_kids_results.html.erb
@@ -1,7 +1,7 @@
 <div class="modal fade mu-kids-results mu-kids-modal-border" id="kids-results" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content success">
-      <button type="button" class="mu-kids-modal-button mu-previous hidden" onclick="mumuki.kids.resultsCarrousel.prevSlide()" aria-label="Previous">
+      <button type="button" class="mu-kids-modal-button mu-previous d-none" onclick="mumuki.kids.resultsCarrousel.prevSlide()" aria-label="Previous">
         <span aria-hidden="true">
           <i class="fas fa-fw fa-arrow-left fa-3x"></i>
         </span>
