--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -1,6 +1,6 @@
 <div class="mu-user-header">
   <h1><%= t(:my_profile) %></h1>
-  <div class="mu-profile-actions hidden-xs">
+  <div class="mu-profile-actions d-none d-md-block">
     <%= edit_profile_button %>
   </div>
 </div>
@@ -35,6 +35,6 @@
     </div>
   </div>
 </div>
-<div class="mu-profile-actions mobile visible-xs">
+<div class="mu-profile-actions mobile d-block d-md-none">
   <%= edit_profile_button %>
 </div>
