--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -14,12 +14,12 @@
 
 <% unless @exercise.input_kids? %>
   <div class="row">
-    <div class="mu-inline-block-right hidden-xs">
+    <div class="mu-inline-block-right d-none d-sm-block">
       <h1><%= language_icon @exercise.language %></h1>
     </div>
     <div class="mu-inline-block-left">
-      <h1 class="hidden-xs"><%= full_title_for @exercise %></h1>
-      <h1 class="visible-xs"><%= short_title_for @exercise %></h1>
+      <h1 class="d-none d-sm-block"><%= full_title_for @exercise %></h1>
+      <h1 class="d-block d-sm-none"><%= short_title_for @exercise %></h1>
       <%= render partial: 'exercises/exercise_title_icons' %>
     </div>
   </div>
