--- a/app/views/layouts/_kids.html.erb
+++ b/app/views/layouts/_kids.html.erb
@@ -19,6 +19,6 @@
   </div>
   <div class="mu-kids-character-speech-bubble-failed <%= current_user? && @assignment.status %>" style="display: none"></div>
 </div>
-<div id="mu-kids-discussion-link-html" class="hidden">
+<div id="mu-kids-discussion-link-html" class="d-none">
   <%= kids_read_discussions_link(exercise) %>
 </div>
