--- a/app/views/layouts/modals/_kindergarten_context.html.erb
+++ b/app/views/layouts/modals/_kindergarten_context.html.erb
@@ -6,7 +6,7 @@
           <i class="fas fa-fw fa-times fa-3x"></i>
         </span>
       </button>
-      <button type="button" class="mu-kids-modal-button mu-previous hidden" onclick="mumuki.kids.context.prevSlide()" aria-label="Previous">
+      <button type="button" class="mu-kids-modal-button mu-previous d-none" onclick="mumuki.kids.context.prevSlide()" aria-label="Previous">
         <span aria-hidden="true">
           <i class="fas fa-fw fa-arrow-left fa-3x"></i>
         </span>
