--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -15,7 +15,7 @@
     <h3>
       <%= t :messages %>
       <% if @discussion.last_moderator_access_visible_for?(current_user) %>
-        <small class="pull-right">
+        <small class="float-end">
           <span><%= t :last_seen, name: @discussion.last_moderator_access_by.full_name %></span>
           <span><%= t :time_since, time: time_ago_in_words(@discussion.last_moderator_access_at) %></span>
         </small>
