--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
         <span class="hamburguer" id="profileDropdown" data-toggle="dropdown">
           <i class="fas fa-bars"></i>
         </span>
-          <ul class="dropdown-menu dropdown-menu-left" aria-labelledby="profileDropdown">
+          <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="profileDropdown">
             <%= yield :breadcrumbs %>
           </ul>
         <% end %>
@@ -31,7 +31,7 @@
               <%= profile_picture_for current_user %>
               <span class="caret"></span>
             </div>
-            <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
               <%= menu_bar_list_items %>
               <% if any_menu_bar_links? %>
                 <li class="divider"></li>
