--- a/app/views/layouts/modals/_level_up.html.erb
+++ b/app/views/layouts/modals/_level_up.html.erb
@@ -5,7 +5,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span></button>
         <div class="guide-corollary-title">
-          <h3 class="text-left" id="gridSystemModalLabel"><%= t :level_up %></h3>
+          <h3 class="text-start" id="gridSystemModalLabel"><%= t :level_up %></h3>
         </div>
       </div>
       <div class="modal-body">
