--- a/app/views/exercise_solutions/_contextualization_results_body.html.erb
+++ b/app/views/exercise_solutions/_contextualization_results_body.html.erb
@@ -7,7 +7,7 @@
         <div>
           <%= contextualization.feedback_html %>
         </div>
-        <a data-toggle="collapse" href="#results-section" class="text-danger">
+        <a data-bs-toggle="collapse" href="#results-section" class="text-danger">
           <%= fa_icon 'question-circle' %> <%= t :details %>
         </a>
       </div>
