--- a/app/views/layouts/_main.html.erb
+++ b/app/views/layouts/_main.html.erb
@@ -33,12 +33,12 @@
     <% if notice %>
       <div class="alert toast toast-success" role="alert">
         <%= notice.html_safe %>
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <button type="button" class="close" data-bs-dismiss="alert">&times;</button>
       </div>
     <% elsif alert %>
       <div class="alert toast toast-error" role="alert">
         <%= alert.html_safe %>
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <button type="button" class="close" data-bs-dismiss="alert">&times;</button>
       </div>
     <% end %>
   </div>
