--- a/app/views/exercises/_exercise_skipped.html.erb
+++ b/app/views/exercises/_exercise_skipped.html.erb
@@ -7,7 +7,7 @@
       <div class="modal-body">
         <div class="container-fluid">
           <%= t :skipped_description %>
-          <%= link_to (t :skipped_solve_anyway), "", "data-dismiss" => "modal" %>
+          <%= link_to (t :skipped_solve_anyway), "", "data-bs-dismiss" => "modal" %>
         </div>
       </div>
       <div class="modal-footer">
