--- a/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
@@ -4,7 +4,7 @@
     <span class="files-tabs">
       <ul class="nav nav-tabs">
         <% @files.each_with_index do |file, index| %>
-          <li role="presentation" class="file-tab <%= 'active' if index == 0 %>" data-target="#editor-file-<%= index %>" tabindex='0' data-toggle='tab'>
+          <li role="presentation" class="file-tab <%= 'active' if index == 0 %>" data-bs-target="#editor-file-<%= index %>" tabindex='0' data-bs-toggle='tab'>
             <a class="file-name" href="#"><%= file.name %></a> <i class="delete-file-button fas fa-times"></i>
           </li>
         <% end %>
