--- a/app/views/layouts/modals/_kindergarten_results.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results.html.erb
@@ -1,7 +1,7 @@
 <div class="modal fade mu-kids-results mu-kids-modal-border" id="kids-results" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content kindergarten">
-      <button type="button" class="mu-kids-modal-button mu-close" data-waiting="" data-dismiss="modal" aria-label="Close">
+      <button type="button" class="mu-kids-modal-button mu-close" data-waiting="" data-bs-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">
           <i class="fas fa-fw fa-times fa-3x"></i>
         </span>
